Rename files and also include file names in PDF

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,4 +1,17 @@
+ifndef::backend-pdf[]
+
 = {product-name} User Guide
+
+endif::[]
+ifdef::backend-pdf[]
+
+= {product-name} Early Access Program
+
+include::partial$experimental.adoc[]
+
+== Introduction
+
+endif::[]
 :env-docs: true
 
 The guide covers the following areas:
