--- a/modules/ROOT/pages/quickstart.adoc
+++ b/modules/ROOT/pages/quickstart.adoc
@@ -96,25 +96,34 @@ Pick one of the following message serialization formats, save the content of the
 ====
 [.include-with-AVRO-messages]
 =====
+ifdef::backend-pdf[]
+.quickstart.source.cdc.avro.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/quickstart.source.cdc.avro.neo4j.json[]
+include::example$docker-data/quickstart.source.cdc.avro.json[]
 ----
 =====
 
 [.include-with-JSON-messages-with-schema]
 =====
+ifdef::backend-pdf[]
+.quickstart.source.cdc.json.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/quickstart.source.cdc.json.neo4j.json[]
+include::example$docker-data/quickstart.source.cdc.json.json[]
 ----
 =====
 
 [.include-with-JSON-messages-as-string]
 =====
+ifdef::backend-pdf[]
+.quickstart.source.cdc.json-string.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/quickstart.source.cdc.json-string.neo4j.json[]
+include::example$docker-data/quickstart.source.cdc.json-string.json[]
 ----
 =====
 ====
@@ -290,25 +299,34 @@ First, save the following JSON file into a local directory named as `sink.neo4j.
 ====
 [.include-with-AVRO-messages]
 =====
+ifdef::backend-pdf[]
+.quickstart.sink.avro.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/quickstart.sink.avro.neo4j.json[]
+include::example$docker-data/quickstart.sink.avro.json[]
 ----
 =====
 
 [.include-with-JSON-messages-with-schema]
 =====
+ifdef::backend-pdf[]
+.quickstart.sink.json.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/quickstart.sink.json.neo4j.json[]
+include::example$docker-data/quickstart.sink.json.json[]
 ----
 =====
 
 [.include-with-JSON-messages-as-string]
 =====
+ifdef::backend-pdf[]
+.quickstart.sink.json-string.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/quickstart.sink.json-string.neo4j.json[]
+include::example$docker-data/quickstart.sink.json-string.json[]
 ----
 =====
 ====
