--- a/modules/ROOT/pages/source.adoc
+++ b/modules/ROOT/pages/source.adoc
@@ -220,25 +220,34 @@ Pick one of the following message serialization formats, save the content of the
 ====
 [.include-with-AVRO-messages]
 =====
+ifdef::backend-pdf[]
+.source.cdc.avro.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/source.cdc.avro.neo4j.json[]
+include::example$docker-data/source.cdc.avro.json[]
 ----
 =====
 
 [.include-with-JSON-messages-with-schema]
 =====
+ifdef::backend-pdf[]
+.source.cdc.json.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/source.cdc.json.neo4j.json[]
+include::example$docker-data/source.cdc.json.json[]
 ----
 =====
 
 [.include-with-JSON-messages-as-string]
 =====
+ifdef::backend-pdf[]
+.source.cdc.json-string.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/source.cdc.json-string.neo4j.json[]
+include::example$docker-data/source.cdc.json-string.json[]
 ----
 =====
 ====
@@ -288,25 +297,34 @@ Pick one of the following message serialization formats, save the content of the
 ====
 [.include-with-AVRO-messages]
 =====
+ifdef::backend-pdf[]
+.source.query.avro.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/source.query.avro.neo4j.json[]
+include::example$docker-data/source.query.avro.json[]
 ----
 =====
 
 [.include-with-JSON-messages-with-schema]
 =====
+ifdef::backend-pdf[]
+.source.query.json.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/source.query.json.neo4j.json[]
+include::example$docker-data/source.query.json.json[]
 ----
 =====
 
 [.include-with-JSON-messages-as-string]
 =====
+ifdef::backend-pdf[]
+.source.query.json-string.json
+endif::[]
 [source,json]
 ----
-include::example$docker-data/source.query.json-string.neo4j.json[]
+include::example$docker-data/source.query.json-string.json[]
 ----
 =====
 ====
