Apply suggestions from code review
Co-authored-by: Nicola Vitucci <nicola.vitucci@neotechnology.com>

--- a/modules/ROOT/partials/sink-dlq-config.adoc
+++ b/modules/ROOT/partials/sink-dlq-config.adoc
@@ -11,7 +11,7 @@ Log bad messages
 Default: `false`
 | errors.deadletterqueue.topic.name | Dead letter queue topic name.
 
-Default: no dead letter queue | errors.deadletterqueue.context.headers.enable | One of `true, `false`.
+Default: no dead letter queue | errors.deadletterqueue.context.headers.enable | One of `true`, `false`.
 Enrich messages with metadata headers
 
 Default: `false`
