--- a/modules/ROOT/pages/overview.adoc
+++ b/modules/ROOT/pages/overview.adoc
@@ -12,7 +12,7 @@ The {product-name} is designed for customers who want to stream data from Apache
 
 == Distribution
 
-It is available in two packaging variants.
+The {product-name} is available in two packaging variants.
 
 === Confluent
 
@@ -89,4 +89,4 @@ The connector is designed to be compatible with versions of Apache Kafka Connect
 
 == Support
 
-The support for the {product-name} deployed into Apache Kafka, Amazon MSK and Confluent Cloud is provided by Neo4j.
+Neo4j provides support for the {product-name} deployed into Apache Kafka, Amazon MSK, and Confluent Cloud.
