Add changelog page

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -4,3 +4,4 @@
 * xref::source.adoc[Source Configuration]
 * xref::sink.adoc[Sink Configuration]
 * xref::confluent-cloud.adoc[Confluent Cloud Support]
+* xref::changelog.adoc[]
