Add CDC sink and known issues sections

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -4,4 +4,5 @@
 * xref::source.adoc[Source Configuration]
 * xref::sink.adoc[Sink Configuration]
 * xref::confluent-cloud.adoc[Confluent Cloud Support]
+* xref::known-issues.adoc[]
 * xref::changelog.adoc[]
