--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -2,14 +2,97 @@
 
 This page lists changes to the {product-name}.
 
-== Version 5.1.0-alpha02
+== Version 5.1.0-beta01
 
-=== Updated features
+=== New and updated features
 
 [cols="2",options="header"]
 |===
 | Feature
 | Details
+
+
+a|
+label:feature[]
+label:new[]
+
+CDC message support for sink connector
+a| Both the new CDC message format available in Neo4j Aura 5 and latest Neo4j 5.x Enterprise Edition, and old streams change message format are now supported in CDC `Source ID` and `Schema` sink strategies.
+
+a|
+label:configuration[]
+label:changed[]
+
+Some `sink` properties are renamed.
+a|
+In order to provide consistent and more intuitive naming we have renamed some `sink` properties. This affects the following properties (`old` -> `now`):
+
+- `neo4j.cdc.sourceId.topic.$topic` -> `neo4j.cdc.source-id.topic.$topic`
+- `neo4j.cdc.sourceId.labelName` -> `neo4j.cdc.source-id.label-name`
+- `neo4j.cdc.sourceId.propertyName` -> `neo4j.cdc.source-id.property-name`
+
+|===
+
+== Version 5.1.0-alpha03
+
+=== New and updated features
+
+[cols="2",options="header"]
+|===
+| Feature
+| Details
+a|
+label:configuration[]
+label:changed[]
+
+Some `sink` properties are renamed.
+a|
+In order to provide consistent and more intuitive naming we have renamed some `sink` properties. This affects the following properties (`old` -> `now`):
+
+- `neo4j.topic.cypher.$topic` -> `neo4j.cypher.topic.$topic`
+- `neo4j.topic.cdc.sourceId` -> `neo4j.cdc.sourceId.topic.$topic`
+- `neo4j.topic.cdc.sourceId.labelName` -> `neo4j.cdc.sourceId.labelName`
+- `neo4j.topic.cdc.sourceId.idName` -> `neo4j.cdc.sourceId.propertyName`
+- `neo4j.topic.cdc.schema` -> `neo4j.cdc.schema.topics`
+- `neo4j.topic.pattern.node.$topic` -> `neo4j.pattern.node.topic.$topic`
+- `noe4j.topic.pattern.merge-node-properties` -> `neo4j.pattern.merge-node-properties`
+- `neo4j.topic.pattern.relationship.$topic` -> `neo4j.pattern.relationship.topic.$topic`
+- `neo4j.topic.pattern.merge-relationship-properties` -> `neo4j.pattern.merge-relationship-properties`
+- `neo4j.topic.cud` -> `neo4j.cud.topics`
+
+a|
+label:functionality[]
+label:changed[]
+
+Schema for CDC events is updated.
+a| We have updated a schema to be compatible for `CREATE`, `UPDATE`, and `DELETE` operations, so it would be possible to
+publish them to the one Kafka topic with `backward` compatibility mode.
+
+a|
+label:bug[]
+label:fixed[]
+
+Fixed a bug with how CDC index pattern configuration is parsed
+a| Previously it would be possible to receive an error if multiple continuous indexes were specified
+
+|===
+
+== Version 5.1.0-alpha02
+
+=== New and updated features
+
+[cols="2",options="header"]
+|===
+| Feature
+| Details
+
+a|
+label:feature[]
+label:new[]
+
+Added key serialisation strategies for CDC source messages.
+a| We've introduced an optional property `neo4j.cdc.topic.$topic.key-strategy`, which specifies keys of CDC source messages will be serialised. Available options as `SKIP`, `ELEMENT_ID`, `ENTITY_KEYS`, `WHOLE_VALUE`.
+
 a|
 label:functionality[]
 label:changed[]
@@ -19,47 +102,4 @@ a|
 Neo4j 5.15 introduced a breaking change on change event schema, where the structure of the `keys` field in node and relationship change events is updated to handle multiple key constraints.
 This release supports both the old and the new structure for compatibility.
 
-|===
-
-== Version 5.1.0-alpha03
-
-=== Updated features
-[cols="2",options="header"]
-|===
-| Feature
-| Details
-a|
-
-Some `sink` properties were renamed.
-a|
-In order to provide consistent and more intuitive naming we have renamed some `sink` properties. This affects the following properties (`old` -> `now`):
-
-- `neo4j.topic.cypher.$topic` -> `neo4j.cypher.topic.$topic`
-- `neo4j.topic.cdc.sourceId` -> `neo4j.topic.cdc.sourceId`
-- `neo4j.topic.cdc.sourceId.labelName` -> `neo4j.cdc.sourceId.labelName`
-- `neo4j.topic.cdc.sourceId.idName` -> `neo4j.cdc.sourceId.labelName`
-- `neo4j.topic.cdc.schema` -> `neo4j.cdc.schema.topics`
-- `neo4j.topic.pattern.node.$topic` -> `neo4j.pattern.node.topic.$topic`
-- `noe4j.topic.pattern.merge-node-properties` -> `neo4j.pattern.merge-node-properties`
-- `neo4j.topic.pattern.relationship.$topic` -> `neo4j.pattern.relationship.topic.$topic`
-- `neo4j.topic.pattern.merge-relationship-properties` -> `neo4j.pattern.merge-relationship-properties`
-- `neo4j.topic.cud` -> `neo4j.cud.topics`
-
-a| Schema for CDC events were updated.
-a| We have updated a schema to be compatible for `CREATE`, `UPDATE`, and `DELETE` operations, so it would be possible to
-publish them to the one Kafka topic with `backward` compatibility mode.
-
-a| Fixed a bug with how CDC index pattern configuration is parsed
-a| Previously it would be possible to receive an error if multiple continuous indexes were specified
-
-|===
-
-=== New features
-[cols="2",options="header"]
-|===
-| Feature
-| Details
-
-|a Added key serialisation strategies for CDC source messages.
-|a We've introduced an optional property `neo4j.cdc.topic.$topic.key-strategy`, which specifies keys of CDC source messages will be serialised. Available options as `SKIP`, `ELEMENT_ID`, `ENTITY_KEYS`, `WHOLE_VALUE`.
 |===
